--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -11,10 +11,9 @@
     <ListView
         android:id="@+id/DeviceList"
         android:layout_width="340dp"
-        android:layout_height="200dp"
-        android:layout_above="@+id/SignOut"
-        android:layout_alignStart="@+id/piechart"
-        android:layout_marginBottom="11dp"
+        android:layout_height="165dp"
+        android:layout_below="@+id/piechart"
+        android:layout_centerHorizontal="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -65,10 +64,10 @@
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/piechart"
         android:layout_width="340dp"
-        android:layout_height="280dp"
+        android:layout_height="275dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"></com.github.mikephil.charting.charts.PieChart>
+        android:layout_alignStart="@+id/DeviceList"
+        android:layout_marginTop="13dp"></com.github.mikephil.charting.charts.PieChart>
 
 </RelativeLayout>
 
