--- a/app/src/main/res/menu/menu_my_account.xml
+++ b/app/src/main/res/menu/menu_my_account.xml
@@ -8,12 +8,6 @@
 
     <item android:id="@+id/settings"
         android:title="Settings"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/refresh"
-        android:icon="@android:drawable/stat_notify_sync_noanim"
-        android:title="Refresh"
-        app:showAsAction="always" />
+        app:showAsAction=""/>
 
 </menu>
