--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -9,19 +9,19 @@
 
     <EditText
         android:id="@+id/DevicePasswordField"
-        android:maxLength="10"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
         android:hint="Device Password"
         android:inputType="textPassword"
-        android:textSize="14sp"
-        android:textColorHint="#FFFFFF"
+        android:maxLength="10"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/LinkDevice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -29,25 +29,23 @@
 
     <EditText
         android:id="@+id/DeviceField"
-        android:maxLength="10"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="106dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="49dp"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:ems="10"
         android:hint="Device ID"
-        android:textColorHint="#FFFFFF"
-        android:textColor="@android:color/white"
         android:inputType="textPersonName"
+        android:maxLength="10"
+        android:textColor="@android:color/white"
+        android:textColorHint="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/DevicePasswordField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/LinkDevice"
@@ -67,11 +65,9 @@
         android:id="@+id/imageView4"
         android:layout_width="298dp"
         android:layout_height="164dp"
-        android:layout_marginBottom="37dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="71dp"
-        app:layout_constraintBottom_toTopOf="@+id/DeviceField"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -79,14 +75,22 @@
 
     <TextView
         android:id="@+id/CurrentDevice"
-        android:layout_width="116dp"
-        android:layout_height="29dp"
+        android:layout_width="166dp"
+        android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="28dp"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
