--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -18,9 +18,9 @@
         android:id="@+id/RefreshGraph"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_below="@+id/barchart"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
         android:background="@drawable/button_selector"
         android:text="REFRESH"
         android:textColor="#FFFFFF"
@@ -32,14 +32,17 @@
         android:id="@+id/ApplianceName"
         android:layout_width="155dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|center_horizontal"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4" />
+
+
 
 </RelativeLayout>
