--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -49,6 +49,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemTextColor="@android:color/black"
         app:menu="@menu/menu_my_account">
 
     </android.support.design.widget.NavigationView>
