--- a/app/src/main/res/menu/menu_my_account.xml
+++ b/app/src/main/res/menu/menu_my_account.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/configure_device"
+
         android:title="Configure Device" />
 
     <item android:id="@+id/settings"
@@ -12,6 +13,7 @@
 
     <item
         android:id="@+id/sign_out"
-        android:title="Sign Out" />
+        android:title="Sign Out"
+        android:icon="@mipmap/ic_signoutnavicon"/>
 
 </menu>
