--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -10,9 +10,10 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
         android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_alignParentTop="true">
-    </com.github.mikephil.charting.charts.BarChart>
+        android:layout_height="300dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ApplianceName"
+        android:layout_marginTop="32dp"></com.github.mikephil.charting.charts.BarChart>
 
     <Button
         android:id="@+id/RefreshGraph"
@@ -38,6 +39,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
+        android:transitionName="graphedDevice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
