--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,5 +5,6 @@
         <item name="colorPrimary">@color/primary_material_dark_1</item>
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowActivityTransitions">true</item>
     </style>
 </resources>
