--- a/app/src/main/res/menu/menu_toolbar_my_account.xml
+++ b/app/src/main/res/menu/menu_toolbar_my_account.xml
@@ -7,4 +7,9 @@
             android:icon="@android:drawable/stat_notify_sync_noanim"
             app:showAsAction="always" />
 
+        <item
+            android:id="@+id/live"
+            android:title="Live"
+            app:showAsAction="always" />
+
 </menu>
